# warframe-market-buddy

./: .editorconfig  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
config/: app.ini
db/: init_schema.sql
src/warframe_market_buddy/: constants.py  db.py  models.py  scraper.py  util.py
